--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["leancloud", "metricsubs", "peaceiris"]
+  "cSpell.words": ["leancloud", "mantine"]
 }
