--- a/package.json
+++ b/package.json
@@ -1,25 +1,51 @@
 {
   "name": "one-leancloud",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "One solution backed by LeanCloud",
+  "main": "index.js",
+  "repository": "https://github.com/metricsubs/one-leancloud.git",
+  "author": "Dizy <dev@dizy.cc>",
+  "license": "GPL-3",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "rimraf out && next build && next export",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src/**/*.tsx src/**/*.ts"
   },
   "devDependencies": {
-    "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "@types/classnames": "^2.3.1",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.26.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4",
+    "vite": "^3.2.2",
+    "vite-tsconfig-paths": "^3.5.2"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.7.0",
+    "@mantine/dates": "^5.7.0",
+    "@mantine/dropzone": "^5.7.0",
+    "@mantine/hooks": "^5.7.0",
+    "@mantine/modals": "^5.7.0",
+    "@mantine/notifications": "^5.7.0",
+    "@mantine/rte": "^5.7.0",
+    "@tabler/icons": "^1.110.0",
+    "classnames": "^2.3.2",
+    "jotai": "^1.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3"
   }
 }
