Add dependencies and entrances

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["leancloud", "mantine"]
+  "cSpell.words": ["leancloud", "mantine", "tabler"]
 }
