--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@tabler/icons": "^1.110.0",
     "classnames": "^2.3.2",
     "jotai": "^1.9.1",
+    "leancloud-realtime": "^5.0.0-rc.7",
+    "leancloud-storage": "^4.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
