Finish the login page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,13 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["leancloud", "mantine", "metricsubs", "tabler"]
+  "cSpell.words": [
+    "Bilibili",
+    "embla",
+    "Gliiiiiitchy",
+    "leancloud",
+    "mantine",
+    "metricsubs",
+    "tabler"
+  ]
 }
