--- a/package.json
+++ b/package.json
@@ -34,15 +34,19 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.7.1",
     "@mantine/core": "^5.7.0",
     "@mantine/dates": "^5.7.0",
     "@mantine/dropzone": "^5.7.0",
+    "@mantine/form": "^5.7.1",
     "@mantine/hooks": "^5.7.0",
     "@mantine/modals": "^5.7.0",
     "@mantine/notifications": "^5.7.0",
     "@mantine/rte": "^5.7.0",
     "@tabler/icons": "^1.110.0",
     "classnames": "^2.3.2",
+    "embla-carousel-autoplay": "^7.0.4",
+    "embla-carousel-react": "^7.0.4",
     "jotai": "^1.9.1",
     "leancloud-realtime": "^5.0.0-rc.7",
     "leancloud-storage": "^4.13.4",
