--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -62,6 +62,8 @@ jobs:
           ONE_LEANCLOUD_APP_KEY: ${{ secrets.ONE_LEANCLOUD_APP_KEY }}
       - name: Add CNAME file
         run: echo "one.metricsubs.cn" > dist/CNAME
+      - name: Add 404 file
+        run: cp dist/index.html dist/404.html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
