Add home UI stats

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,11 +27,13 @@
   ],
   "cSpell.words": [
     "Bilibili",
+    "Captionings",
     "embla",
     "Gliiiiiitchy",
     "leancloud",
     "mantine",
     "metricsubs",
+    "Proofreadings",
     "tabler"
   ]
 }
